test/integration/cli-args/sstanc.t/fail/bad-control-flow-observe.stan
data {
  real y;
}
model {
  if (1 == 1) {
    y ~ normal(0, 1);
  }
}
